--- a/index.html
+++ b/index.html
@@ -193,10 +193,7 @@
         }
 
         .click-hint {
-            position: fixed;
-            bottom: 1.5rem;
-            left: 50%;
-            transform: translateX(-50%);
+            margin-top: 1.5rem;
             color: rgba(255,255,255,0.4);
             font-size: 0.8rem;
             letter-spacing: 1px;
@@ -277,10 +274,10 @@
         <p class="subtext" id="subtext"></p>
         <div class="emoji" id="emoji"></div>
         <div class="countdown" id="countdown"></div>
+        <div class="click-hint">tap for sound</div>
     </div>
 
     <button class="sound-btn" id="soundBtn" onclick="toggleSound()">🔊</button>
-    <div class="click-hint">tap for sound</div>
     <div class="tagline">Created @ Lila Jane Studios</div>
 
     <div class="progress-track">
